[JDK 11] Started migrating to Java 11 Modules